--- a/cpp20/module/CMakeLists.txt
+++ b/cpp20/module/CMakeLists.txt
@@ -1,12 +1,8 @@
 # https://gitlab.kitware.com/cmake/cmake/-/merge_requests/5562
 # https://www.kitware.com/import-cmake-c20-modules/
+cmake_minimum_required(VERSION 3.26)
 
-set_property(DIRECTORY PROPERTY LABELS 20)
-
-if(CMAKE_VERSION VERSION_LESS 3.26)
-  message(STATUS "CMake 3.26 or newer is required for C++20 modules.")
-  return()
-endif()
+project(CXXModules LANGUAGES CXX)
 
 set(CMAKE_EXPERIMENTAL_CXX_MODULE_DYNDEP 1)
 set(CMAKE_EXPERIMENTAL_CXX_MODULE_CMAKE_API "2182bf5c-ef0d-489a-91da-49dbc3090d2a")
