--- a/cpp14/CMakeLists.txt
+++ b/cpp14/CMakeLists.txt
@@ -1,14 +1,7 @@
 set_property(DIRECTORY PROPERTY LABELS 14)
 
-check_source_compiles(CXX
-"#include <cstdlib>
-#include <thread>
-int main() {
-  unsigned int n = std::thread::hardware_concurrency();
-  return EXIT_SUCCESS;
-}"
-HAVE_THREAD
-)
+file(READ thread_count.cpp src)
+check_source_compiles(CXX "${src}" HAVE_THREAD)
 
 if(HAVE_THREAD)
   add_executable(thread_count thread_count.cpp)
