--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,11 @@ enable_testing()
 
 set(CMAKE_CXX_STANDARD 23)
 
+if(CMAKE_C_COMPILER_ID MATCHES "GNU|Clang")
+  list(APPEND CMAKE_REQUIRED_FLAGS -Werror)
+  # makes unsupported attributes checks error.
+endif()
+
 include(cmake/compilers.cmake)
 
 add_subdirectory(cpp11)
