oneapi: add -Werror to checks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_STANDARD 23)
 # makes unsupported attributes checks error.
 if(MSVC)
   list(APPEND CMAKE_REQUIRED_FLAGS /WX)
-elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang|^Intel")
   list(APPEND CMAKE_REQUIRED_FLAGS -Werror)
 endif()
 
