--- a/cpp17/CMakeLists.txt
+++ b/cpp17/CMakeLists.txt
@@ -1,17 +1,7 @@
 set_property(DIRECTORY PROPERTY LABELS 17)
 
-check_cxx_symbol_exists(__cpp_fold_expressions "" cpp17_fold)
-
-if(cpp17_fold)
-  add_executable(folding folding.cpp)
-  add_test(NAME folding COMMAND folding)
-endif()
-
+check_cxx_symbol_exists(__cpp_fold_expressions "" cpp17_folding)
 check_cxx_symbol_exists(__cpp_deduction_guides "" cpp17_ctad)
-if(cpp17_ctad)
-  add_executable(random_string random_string.cpp)
-  add_test(NAME random_string COMMAND random_string)
-endif()
 
 check_source_compiles(CXX
 "#if !__has_cpp_attribute(maybe_unused)
@@ -20,7 +10,16 @@ check_source_compiles(CXX
 int main(){ return 0; }"
 cpp17_maybe_unused
 )
-if(cpp17_maybe_unused)
-  add_executable(maybe_unused maybe_unused.cpp)
-  add_test(NAME maybe_unused COMMAND maybe_unused)
+
+foreach(t IN ITEMS folding maybe_unused)
+  if(cpp17_${t})
+    add_executable(${t} ${t}.cpp)
+    add_test(NAME ${t} COMMAND ${t})
+  endif()
+endforeach()
+
+
+if(cpp17_ctad)
+  add_executable(random_string random_string.cpp)
+  add_test(NAME random_string COMMAND random_string)
 endif()
