better CMake .gitignore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,13 +19,6 @@ if(tidy)
 
 endif()
 
-# makes unsupported attributes checks error.
-if(MSVC)
-  list(APPEND CMAKE_REQUIRED_FLAGS /WX)
-elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang|^Intel")
-  list(APPEND CMAKE_REQUIRED_FLAGS -Werror)
-endif()
-
 include(cmake/compilers.cmake)
 
 add_subdirectory(cpp11)
@@ -33,3 +26,5 @@ add_subdirectory(cpp14)
 add_subdirectory(cpp17)
 add_subdirectory(cpp20)
 add_subdirectory(cpp23)
+
+file(GENERATE OUTPUT .gitignore CONTENT "*")
