--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
-cmake_minimum_required(VERSION 3.25...3.26)
+cmake_minimum_required(VERSION 3.20...3.26)
+# CMake 3.20 is oldest version supporting C++23
 
 project(Cpp23examples LANGUAGES CXX)
 
