--- a/cpp17/CMakeLists.txt
+++ b/cpp17/CMakeLists.txt
@@ -1,7 +1,8 @@
 set_property(DIRECTORY PROPERTY LABELS 17)
 
 check_cxx_symbol_exists(__cpp_fold_expressions "" cpp17_folding)
-check_cxx_symbol_exists(__cpp_deduction_guides "" cpp17_ctad)
+check_cxx_symbol_exists(__cpp_deduction_guides "" cpp17_deduction_guides)
+check_cxx_symbol_exists(__cpp_lib_sample "algorithm" cpp17_sample)
 check_cxx_symbol_exists(__cpp_structured_bindings "" cpp17_structured_bindings)
 
 # NOTE: this is not a complete c++17 filesystem check. See:
@@ -34,7 +35,8 @@ check_source_compiles(CXX
 cpp17_init_if_switch
 )
 
-foreach(t IN ITEMS fallthrough filesystem folding init_if_switch maybe_unused structured_bindings)
+foreach(t IN ITEMS deduction_guides fallthrough filesystem folding
+          init_if_switch maybe_unused sample structured_bindings)
   if(cpp17_${t})
     add_executable(${t} ${t}.cpp)
     add_test(NAME ${t} COMMAND ${t})
@@ -45,10 +47,4 @@ if(TARGET filesystem)
   target_link_libraries(filesystem PRIVATE
   "$<$<CXX_COMPILER_ID:NVHPC>:stdc++fs;stdc++>"
   )
-endif()
-
-
-if(cpp17_ctad)
-  add_executable(random_string random_string.cpp)
-  add_test(NAME random_string COMMAND random_string)
 endif()
