add source_location, use <version>

--- a/cpp20/CMakeLists.txt
+++ b/cpp20/CMakeLists.txt
@@ -4,8 +4,9 @@ if(HAVE_MODULES)
   add_subdirectory(module)
 endif()
 
-check_cxx_symbol_exists(__cpp_lib_coroutine coroutine cpp20_coroutine)
-check_cxx_symbol_exists(__cpp_lib_math_constants numbers cpp20_numbers)
+check_cxx_symbol_exists(__cpp_lib_coroutine "version" cpp20_coroutine)
+check_cxx_symbol_exists(__cpp_lib_math_constants "version" cpp20_numbers)
+check_cxx_symbol_exists(__cpp_lib_source_location "version" cpp20_source_location)
 check_source_compiles(CXX
 "#if !__has_cpp_attribute(likely)
 #error \"no likely attribute\"
@@ -26,9 +27,13 @@ int main(){
 cpp20_ranges_find
 )
 
-foreach(t IN ITEMS coroutine likely numbers ranges_find)
+foreach(t IN ITEMS likely numbers ranges_find source_location)
   if(cpp20_${t})
     add_executable(${t} ${t}.cpp)
     add_test(NAME ${t} COMMAND ${t})
   endif()
 endforeach()
+
+if(cpp20_coroutine)
+  add_subdirectory(coroutine)
+endif()
