--- a/cpp20/module/CMakeLists.txt
+++ b/cpp20/module/CMakeLists.txt
@@ -1,6 +1,6 @@
 # https://gitlab.kitware.com/cmake/cmake/-/merge_requests/5562
 # https://www.kitware.com/import-cmake-c20-modules/
-cmake_minimum_required(VERSION 3.25.2...3.27)
+cmake_minimum_required(VERSION 3.25.2...3.28)
 
 project(CXXModules LANGUAGES CXX)
 
@@ -8,11 +8,15 @@ set(CMAKE_CXX_STANDARD 20)
 
 set(CMAKE_EXPERIMENTAL_CXX_MODULE_DYNDEP 1)
 
+# UUID at https://gitlab.kitware.com/cmake/cmake/-/blob/master/Help/dev/experimental.rst
 if(CMAKE_VERSION VERSION_LESS 3.26)
   set(CMAKE_EXPERIMENTAL_CXX_MODULE_CMAKE_API "3c375311-a3c9-4396-a187-3227ef642046")
-else()
-  # FIXME: update when CMake 3.27 is released
+elseif(CMAKE_VERSION VERSION_LESS 3.27)
   set(CMAKE_EXPERIMENTAL_CXX_MODULE_CMAKE_API "2182bf5c-ef0d-489a-91da-49dbc3090d2a")
+elseif(CMAKE_VERSION VERSION_LESS 3.28)
+  set(CMAKE_EXPERIMENTAL_CXX_MODULE_CMAKE_API "aa1f7df0-828a-4fcd-9afc-2dc80491aca7")
+elseif(CMAKE_VERSION VERSION_LESS 3.29)
+  set(CMAKE_EXPERIMENTAL_CXX_MODULE_CMAKE_API "a816ed09-43d1-40e5-bc8c-1a2824ee194e")
 endif()
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
