--- a/cpp20/CMakeLists.txt
+++ b/cpp20/CMakeLists.txt
@@ -4,9 +4,11 @@ if(HAVE_MODULES)
   add_subdirectory(module)
 endif()
 
+# https://en.cppreference.com/w/cpp/header/version
 check_cxx_symbol_exists(__cpp_lib_coroutine "version" cpp20_coroutine)
 check_cxx_symbol_exists(__cpp_lib_math_constants "version" cpp20_numbers)
 check_cxx_symbol_exists(__cpp_lib_source_location "version" cpp20_source_location)
+check_cxx_symbol_exists(__cpp_lib_smart_ptr_for_overwrite "version" cpp20_smart_ptr_for_overwrite)
 check_source_compiles(CXX
 "#if !__has_cpp_attribute(likely)
 #error \"no likely attribute\"
@@ -27,7 +29,7 @@ int main(){
 cpp20_ranges_find
 )
 
-foreach(t IN ITEMS likely numbers ranges_find source_location)
+foreach(t IN ITEMS likely numbers ranges_find source_location smart_ptr_for_overwrite)
   if(cpp20_${t})
     add_executable(${t} ${t}.cpp)
     add_test(NAME ${t} COMMAND ${t})
