--- a/cpp14/CMakeLists.txt
+++ b/cpp14/CMakeLists.txt
@@ -1,9 +1,14 @@
 set_property(DIRECTORY PROPERTY LABELS 14)
 
-file(READ thread_count.cpp src)
+check_cxx_symbol_exists(__cpp_lib_make_unique "memory" cpp14_make_unique)
+
+file(READ thread.cpp src)
 check_source_compiles(CXX "${src}" cpp14_thread)
 
-if(cpp14_thread)
-  add_executable(thread_count thread_count.cpp)
-  add_test(NAME thread COMMAND thread_count)
-endif()
+
+foreach(t IN ITEMS thread make_unique)
+  if(cpp14_${t})
+    add_executable(${t} ${t}.cpp)
+    add_test(NAME ${t} COMMAND ${t})
+  endif()
+endforeach()
