--- a/cpp20/coroutine/CMakeLists.txt
+++ b/cpp20/coroutine/CMakeLists.txt
@@ -1,2 +1,11 @@
+set_property(DIRECTORY PROPERTY LABELS "coroutine")
 
-add_executable(coroutine_generator generator.cpp)
+foreach(t IN ITEMS coroutine_handle handle co_return generator promise return yield
+    )
+  add_executable(coroutine_${t} ${t}.cpp)
+  add_test(NAME coroutine_${t} COMMAND coroutine_${t})
+endforeach()
+
+set_property(TEST coroutine_co_return coroutine_handle coroutine_promise coroutine_return coroutine_yield
+PROPERTY PASS_REGULAR_EXPRESSION "counter: 2"
+)
