--- a/cpp23/CMakeLists.txt
+++ b/cpp23/CMakeLists.txt
@@ -17,8 +17,9 @@ check_cxx_symbol_exists(__cpp_lib_print "version" cpp23_print)
 check_cxx_symbol_exists(__cpp_lib_expected "version" cpp23_expected)
 check_include_file_cxx(stdfloat cpp23_stdfloat)
 check_cxx_symbol_exists(__cpp_lib_unreachable "version" cpp23_unreachable)
+check_cxx_symbol_exists(__cpp_lib_stacktrace "version" cpp23_stacktrace)
 
-foreach(t IN ITEMS assume expected print stdfloat)
+foreach(t IN ITEMS assume expected print stacktrace stdfloat)
   if(cpp23_${t})
     add_executable(${t} ${t}.cpp)
     add_test(NAME ${t} COMMAND ${t})
