label modules dir

--- a/cpp20/module/CMakeLists.txt
+++ b/cpp20/module/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 3.28)
 
 project(CXXModules LANGUAGES CXX)
 
+set_property(DIRECTORY PROPERTY LABELS "CppModules")
+
 if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 20)
 endif()
